FB2: fix block images sizing and centering
Followup to 1544bcfb, where we made an image self
container's width adjust to the image width, so
text-align:center no longer does what was expected.
Switch to margin-left/right:auto to get them centered
again.
Also, for standalone block images, set the strut and
line-height to 0 (as we do for HTML) so they their
block is adjusted to the page height when the image
itself exceeds it, to avoid such images to be
truncated and sliced on two pages.

--- a/cr3gui/data/fb2.css
+++ b/cr3gui/data/fb2.css
@@ -10,7 +10,7 @@ a { display: inline; text-decoration: underline; }
 a[type="note"] { vertical-align: super; font-size: 70%; text-decoration: none }
 a[type="note"]::before { content: "\2060" } /* word joiner, avoid break before */
 
-image { text-align: center; text-indent: 0; display: block }
+image { text-indent: 0; display: block; margin: 0 auto; }
 p image { display: inline }
 li image { display: inline }
 
